<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="channelVM" type="id.pintro.payment.channel.PaymentChannelVM"/>
        <import type="android.view.View"/>
    </data>
    <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:id="@+id/root_payment_channel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/choose_payment_method"
                style="@style/AppTheme.Text.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <View
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_smoke"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RelativeLayout
                    bind:visibility="@{channelVM.isLoading() ? View.VISIBLE: View.GONE }"
                    android:id="@+id/lty_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ProgressBar
                        android:progressDrawable="@drawable/ic_arrow_right_primary"
                        android:layout_above="@id/tv_tray_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView

                        android:layout_margin="@dimen/margin_medium"
                        android:id="@+id/tv_tray_again"
                        style="@style/AppTheme.Text.Content.Primary"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/please_wait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                    bind:visibility="@{channelVM.isError()  ? View.VISIBLE: View.GONE }"
                    android:id="@+id/lyt_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/tv_error"
                        android:layout_margin="@dimen/margin_medium"
                        style="@style/AppTheme.Text.Content.Primary"
                        android:text="@string/something_wrong"
                        android:layout_above="@id/tv_tray_again_empty"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:background="@drawable/bg_rounded_outer_primary"
                        android:layout_margin="@dimen/margin_medium"
                        android:id="@+id/tv_tray_again_empty"
                        style="@style/AppTheme.Text.Content.Primary"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/try_again"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                    bind:visibility="@{channelVM.isLoading() ? View.GONE: View.VISIBLE }"
                    android:layout_margin="5dp"
                    android:id="@+id/rcv_payment_group"
                    tools:listitem="@layout/item_payment_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </RelativeLayout>
    </LinearLayout>
</layout>
