<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="paymentPreviewVm" type="id.pintro.payment.preview.PaymentPreviewVM"/>
        <import type="android.view.View"/>
    </data>
    <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            tools:context=".preview.PaymentPreviewFragment">
        <androidx.core.widget.NestedScrollView
                android:layout_margin="@dimen/margin_medium"
                android:layout_above="@id/btn_nex_payment_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:textSize="20sp"
                        android:text="@string/payment_details"
                        style="@style/HelveticaPrimaryTextColorNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <View
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_smoke"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_item_payment_details"
                        tools:listitem="@layout/item_payment_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <View
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_smoke"/>
                <LinearLayout
                        android:background="@color/white"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textColor="@color/black20"
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="start"
                            android:textAlignment="textStart"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/payment_method"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/sample_payment_method"
                            android:textColor="@color/black20"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:background="@color/white"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textColor="@color/black20"
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="start"
                            android:textAlignment="textStart"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/sub_total"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/sample_price"
                            android:textColor="@color/black20"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:background="@color/white"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textColor="@color/black20"
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="start"
                            android:textAlignment="textStart"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/admin_fee"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/sample_price"
                            android:textColor="@color/black20"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/lyt_donations"
                        bind:visibility="@{paymentPreviewVm.isDonations() ? View.VISIBLE:View.GONE}"
                        android:background="@color/white"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textColor="@color/black20"
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="start"
                            android:textAlignment="textStart"
                            android:layout_gravity="start|center_vertical"
                            android:layout_weight="1"
                            android:text="@string/donasi"
                            style="@style/AppTheme.Text.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <EditText
                            android:text="@string/sample_price"
                            android:gravity="center_vertical|end"
                            android:layout_weight="1"
                            android:background="@drawable/bg_rounded_outer_primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_smoke"/>
                <LinearLayout
                        android:background="@color/white"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textSize="20sp"
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="start|center_vertical"
                            android:textAlignment="textStart"
                            android:layout_gravity="start|center_vertical"
                            android:layout_weight="1"
                            android:text="@string/total"
                            style="@style/AppTheme.Text.Content.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:textSize="20sp"
                            android:layout_margin="@dimen/margin_medium"
                            android:gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/sample_price"
                            style="@style/AppTheme.Text.Content.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.button.MaterialButton
                android:layout_alignParentBottom="true"
                android:id="@+id/btn_nex_payment_preview"
                android:text="Next"
                android:layout_margin="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
</layout>
